RESOLVED FIXED16678
Unreproducible crash in KJS::JSObject::inherits() after using Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=16678
Summary Unreproducible crash in KJS::JSObject::inherits() after using Web Inspector
David Kilzer (:ddkilzer)
Reported 2007-12-30 08:08:23 PST
* SUMMARY I've seen two crashes in KJS::JSObject::inherits() now related to the WebInspector. I'm not sure how to reproduce the crash yet. * NOTES No console output reported for the crash. Crash log: Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x00000000 Thread 0 Crashed: 0 com.apple.JavaScriptCore 0x0061dad8 KJS::JSObject::inherits(KJS::ClassInfo const*) const + 32 (object.h:526) 1 com.apple.JavaScriptCore 0x005d3944 JSObjectSetPrivate + 68 (JSObjectRef.cpp:254) 2 com.apple.WebCore 0x0126e394 WebCore::InspectorController::~InspectorController [in-charge]() + 220 (InspectorController.cpp:616) 3 com.apple.WebCore 0x018f95c8 void WTF::deleteOwnedPtr<WebCore::InspectorController>(WebCore::InspectorController*) + 52 (OwnPtr.h:52) 4 com.apple.WebCore 0x018f9614 WTF::OwnPtr<WebCore::InspectorController>::~OwnPtr [in-charge]() + 40 (OwnPtr.h:70) 5 com.apple.WebCore 0x01357b58 WebCore::Page::~Page [in-charge]() + 476 (Page.cpp:120) 6 com.apple.WebKit 0x003d91c8 -[WebView(WebPrivate) _close] + 596 (WebView.mm:715) 7 com.apple.Safari 0x00050b60 0x1000 + 326496 8 com.apple.Safari 0x000506c8 0x1000 + 325320 9 com.apple.WebKit 0x003c2874 -[WebView close] + 60 (WebView.mm:2022) 10 com.apple.Safari 0x00053c88 0x1000 + 339080 11 com.apple.Safari 0x00054038 0x1000 + 340024 12 com.apple.AppKit 0x93847d44 -[NSApplication sendAction:to:from:] + 108 13 com.apple.Safari 0x00034ae0 0x1000 + 211680 14 com.apple.AppKit 0x938a25b0 -[NSMenu performActionForItemAtIndex:] + 392 15 com.apple.AppKit 0x938a2334 -[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 104 16 com.apple.AppKit 0x938a1ddc -[NSMenu performKeyEquivalent:] + 272 17 com.apple.AppKit 0x938a1a28 -[NSApplication _handleKeyEquivalent:] + 328 18 com.apple.AppKit 0x937ab4e8 -[NSApplication sendEvent:] + 2944 19 com.apple.Safari 0x000304b4 0x1000 + 193716 20 com.apple.AppKit 0x937a2df0 -[NSApplication run] + 508 21 com.apple.AppKit 0x93893974 NSApplicationMain + 452 22 com.apple.Safari 0x0009bad4 0x1000 + 633556 23 com.apple.Safari 0x000022fc 0x1000 + 4860
Attachments
Patch (1.38 KB, patch)
2008-01-08 20:38 PST, Timothy Hatcher
beidson: review+
Timothy Hatcher
Comment 1 2008-01-08 20:38:53 PST
Brady Eidson
Comment 2 2008-01-08 20:48:50 PST
Comment on attachment 18342 [details] Patch r=me
Timothy Hatcher
Comment 3 2008-01-08 20:49:49 PST
Landed a fix in r29335.
Note You need to log in before you can comment on or make changes to this bug.