        Reviewed by Brady.

Bug 16678: Unreproducible crash in KJS::JSObject::inherits() after using Web Inspector
        http://bugs.webkit.org/show_bug.cgi?id=16678

        Add a NULL check for controller before calling JSObjectSetPrivate.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::~InspectorController):



Canonical link: https://commits.webkit.org/23168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29335 268f45cc-cd09-0410-ab3c-d52691b4dbfc